Added get playlist API to the service
