# src/index.js
@@ -49,6 +49,8 @@ class ProblemService extends Service {
 
     // Playlist
     this.app.post(`${PROBLEMS_API}/playlist`, verifyScope('PLAYLIST.U'), routes.playlist.registerPlaylist);
+    this.app.get(`${PROBLEMS_API}/playlist`, verifyScope('PLAYLIST.V'), routes.playlist.getPlaylist);
+    this.app.get(`${PROBLEMS_API}/playlist/:playlistId`, verifyScope('PLAYLIST.V'), routes.playlist.getPlaylist);
   }
 }
 
