# src/openapi.yaml
@@ -49,6 +49,15 @@ components:
         type: string
         pattern: '^[A-F0-9]{8}:[A-F0-9]{4}-[A-F0-9]{4}-[A-F0-9]{4}-[A-F0-9]{11}'
 
+    playlistIdParam:
+      name: playlistId
+      description: The ID of playlist to verify
+      in: path
+      required: true
+      schema:
+        type: string
+        pattern: '^[A-F0-9]{8}:[A-F0-9]{4}-[A-F0-9]{4}-[A-F0-9]{4}-[A-F0-9]{11}'
+
   schemas:
     registerSheetTypePayload:
       type: object
@@ -600,6 +609,21 @@ components:
         - createdDate
         - modifiedDate
 
+    getAllPlaylistResponseData:
+      title: Schema for retrieving Playlist Details
+      type: object
+      properties:
+        id:
+          type: string
+        userId:
+          type: string
+        name:
+          type: string
+      required:
+        - id
+        - userId
+        - name
+
     healthCheckSuccessResponse:
       type: object
       properties:
@@ -1050,6 +1074,36 @@ components:
         data:
           type: object
           $ref: '#/components/schemas/getPlaylistResponseData'
+      required:
+        - statusCode
+        - type
+        - message
+        - devMessage
+        - success
+        - data
+
+    getAllPlaylistResponse:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          example: 200
+        type:
+          type: string
+          example: 'SUCCESS'
+        message:
+          type: string
+          example: 'Success'
+        devMessage:
+          type: string
+          example: 'Success'
+        success:
+          type: boolean
+          example: true
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/getAllPlaylistResponseData'
       required:
         - statusCode
         - type
@@ -2417,42 +2471,42 @@ paths:
       parameters:
         - $ref: '#/components/parameters/SheetIdParam'
       responses:
-          '200':
-            description: SUCCESS
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/getSheetSolutionsByIDResponse'
-          '400':
-            description: BAD_REQUEST
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/badRequestResponse'
-          '401':
-            description: UNAUTHORIZED
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/unauthorizedResponse'
-          '403':
-            description: FORBIDDEN
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/forbiddenResponse'
-          '404':
-            description: NOT_FOUND
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/notFound'
-          '500':
-            description: INTERNAL_SERVER_ERROR
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/internalServerErrorResponse'
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getSheetSolutionsByIDResponse'
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/badRequestResponse'
+        '401':
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorizedResponse'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/forbiddenResponse'
+        '404':
+          description: NOT_FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/notFound'
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerErrorResponse'
 
   /sheet/{sheetId}/detail:
     get:
@@ -2462,42 +2516,42 @@ paths:
       parameters:
         - $ref: '#/components/parameters/SheetIdParam'
       responses:
-          '200':
-            description: SUCCESS
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/getSheetByIDResponse'
-          '400':
-            description: BAD_REQUEST
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/badRequestResponse'
-          '401':
-            description: UNAUTHORIZED
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/unauthorizedResponse'
-          '403':
-            description: FORBIDDEN
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/forbiddenResponse'
-          '404':
-            description: NOT_FOUND
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/notFound'
-          '500':
-            description: INTERNAL_SERVER_ERROR
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/internalServerErrorResponse'
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getSheetByIDResponse'
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/badRequestResponse'
+        '401':
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorizedResponse'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/forbiddenResponse'
+        '404':
+          description: NOT_FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/notFound'
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerErrorResponse'
 
   /playlist:
     post:
@@ -2565,6 +2619,99 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/unprocessableContent'
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerErrorResponse'
+
+    get:
+      operationId: getPlaylist
+      summary: Get Playlist
+      description: An API to fetch all playlist for user from system
+      responses:
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getAllPlaylistResponse'
+        '204':
+          description: CONTENT_NOT_AVAILABLE
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/noContentResponse'
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/badRequestResponse'
+        '401':
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorizedResponse'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/forbiddenResponse'
+        '404':
+          description: NOT_FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/notFound'
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerErrorResponse'
+
+  /playlist/{playlistId}:
+    get:
+      operationId: getPlaylistById
+      summary: Get Playlist by ID
+      description: An API to retrieve the playlist details for requested ID.
+      parameters:
+        - $ref: '#/components/parameters/playlistIdParam'
+      responses:
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getPlaylistByIDResponse'
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/badRequestResponse'
+        '401':
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorizedResponse'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/forbiddenResponse'
+        '404':
+          description: NOT_FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/notFound'
         '500':
           description: INTERNAL_SERVER_ERROR
           content:
